tests/snapshots/e2e__command-near-miss.snap
---
source: tests/e2e.rs
expression: "run(\"command-near-miss\", &[\"--strict\"])"
---
$ stilltrue --strict
stilltrue: no findings

exit: 0
