tests/snapshots/e2e__configured-exclude.snap
---
source: tests/e2e.rs
expression: "run(\"configured-exclude\", &[])"
---
$ stilltrue 
CLAUDE.md:1:6  rot  command `make demo` has no target in Makefile
                    likely broke in <sha> "drop the demo target" · <when>
                    did you mean: make seed?
docs/guide.md:1:6  rot  command `make demo` has no target in Makefile
                        likely broke in <sha> "drop the demo target" · <when>
                        did you mean: make seed?

stilltrue: 2 rot, 0 lie

exit: 1
