tests/snapshots/e2e__degraded-require-history.snap
---
source: tests/e2e.rs
expression: "run(\"degraded-shallow\", &[\"--require-history\"])"
---
$ stilltrue --require-history
stilltrue: history unavailable (shallow clone) — nothing can be reported as rot.
stilltrue: fix: check out with `fetch-depth: 0`, or pass --require-history to fail instead.

exit: 2
